feat: link to main page in new attendee view

--- a/views/new_attendee.ejs
+++ b/views/new_attendee.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
+    <nav>
+        <a href="/">Main Page</a>
+    </nav>
     <h2>New Attendee Registration</h2>
         <form action="/attendees" method="POST" id="attendeeForm">
             <label for="firstname">First Name: </label>
