fix: inputb fields must have required

--- a/views/edit_attendee.ejs
+++ b/views/edit_attendee.ejs
@@ -21,11 +21,11 @@
                 <%})%>
             </select>
             <label for="firstname">First Name: </label>
-            <input name="firstname" id="firstname" type="text">
+            <input name="firstname" id="firstname" type="text" required>
             <label for="lastname">Last Name: </label>
-            <input name="lastname" id="lastname" type="text">
+            <input name="lastname" id="lastname" type="text" required>
             <label>Display Name: </label>
-            <input name="displayname" id="displayname" type="text">
+            <input name="displayname" id="displayname" type="text" required>
 
         <button type="submit">Update</button>
     </form>
