--- a/views/new_attendee.ejs
+++ b/views/new_attendee.ejs
@@ -15,11 +15,11 @@
     <h2>New Attendee Registration</h2>
         <form action="/attendees" method="POST" id="attendeeForm">
             <label for="firstname">First Name: </label>
-            <input name="firstname" id="firstname" type="text">
+            <input name="firstname" id="firstname" type="text" required>
             <label for="lastname">Last Name: </label>
-            <input name="lastname" id="lastname" type="text">
+            <input name="lastname" id="lastname" type="text" required>
             <label>Display Name: </label>
-            <input name="displayname" id="displayname" type="text">
+            <input name="displayname" id="displayname" type="text" required>
             <label for="sessions"></label>
             <label for="sessions"></label>
             <label for="sessions">Choose a session:</label>
