feat: list attendees for session in edit_session view

--- a/views/edit_session.ejs
+++ b/views/edit_session.ejs
@@ -32,6 +32,8 @@
             <button type="submit" id="registartionUpdateButton">Update Registration</button>
             <button type="submit" id="registrationDeleteButton">Cancel Registration</button>
         </div>
+
     </form>
+    <table id="attending_table"></table>
 </body>
 </html>
